проекты теперь в формате json, рендер скриптом

--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -1,5 +1,4 @@
-<section class="catalog">
-  <a id="catalog"></a>
+<section id="catalog" class="catalog">
   <div class="catalog__container container">
 
     <div class="catalog__filter catalog-filter">
@@ -48,13 +47,11 @@
     </div>
     <ul class="catalog-list catalog-list--html">
       <!-- погнали -->
-      <li class="catalog-item active" data-filter="html-css">
-        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+      <!-- <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__img catalog-item__img--pognali">
           <picture>
             <source type="image/webp" srcset="img/img-pognali@1xdesktop.webp">
-            <img src="img/img-pognali@1xdesktop.jpg" srcset="" alt="Превью сайт повышения квалификации" width="358"
-              height="578" />
+            <img src="img/img-pognali@1xdesktop.jpg" srcset="" alt="Превью сайт попутчиков" width="358" height="578" />
           </picture>
         </div>
         <div class="catalog-item__hover-menu">
@@ -74,13 +71,12 @@
             <span>Repository</span>
           </a>
         </div>
-      </li>
+      </li> -->
       <!-- way -->
-      <li class="catalog-item active" data-filter="html-css">
-        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+      <!-- <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__img">
           <picture>
-            <img src="img/komarov-way-2.jpg" alt="Превью сайт о путешесвтиях" width="358" height="578" />
+            <img src="img/komarov-way-2.jpg" alt="Превью сайт о путешествиях" width="358" height="578" />
           </picture>
         </div>
         <div class="catalog-item__hover-menu">
@@ -98,10 +94,9 @@
             <span>Repository</span>
           </a>
         </div>
-      </li>
+      </li> -->
       <!-- mishka -->
-      <li class="catalog-item active" data-filter="html-css">
-        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+      <!-- <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__img">
           <picture>
             <img src="img/mishka-preview.jpg" alt="Превью сайт вязанные вещи ручной работы" width="358" height="578" />
@@ -111,7 +106,8 @@
           <a href="https://askomarov.github.io/komarov_way/" target="_blank" class="catalog-item__title-link">
             <h2 class="catalog-item__title">Сайт о вариантах путешествий</h2>
           </a>
-          <p class="catalog-item__desc">Адаптивный трех-страничный mobile-first сайт. С использованием сборки gulp, препроцессора Sass. Не много JavaScript</p>
+          <p class="catalog-item__desc">Адаптивный трех-страничный mobile-first сайт. С использованием сборки gulp,
+            препроцессора Sass. Не много JavaScript</p>
           <a href="https://askomarov.github.io/mishka/" target="_blank" class="catalog-item__btn main-btn">view
             project</a>
           <a class="catalog-item__repo-link" href="https://github.com/askomarov/mishka" target="_blank">
@@ -121,10 +117,9 @@
             <span>Repository</span>
           </a>
         </div>
-      </li>
+      </li> -->
       <!-- кат-энерджи -->
-      <li class="catalog-item active" data-filter="html-css">
-        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+      <!-- <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__img">
           <picture>
             <source type="image/webp" srcset="img/img-catenergy.webp 1x, img/img-catenergy@2x.webp 2x">
@@ -148,15 +143,14 @@
             <span>Repository</span>
           </a>
         </div>
-      </li>
+      </li> -->
       <!-- глэйси -->
-      <li class="catalog-item active" data-filter="html-css">
-        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+      <!-- <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__img">
           <picture>
             <source type="image/webp" srcset="img/img-gllacy.webp 1x, img/img-gllacy@2x.webp 2x">
-            <img src="img/img-gllacy.jpg" srcset="img/img-gllacy@2x.jpg" alt="Превью сайта салон красоты Barber-shop"
-              width="358" height="578" />
+            <img src="img/img-gllacy.jpg" srcset="img/img-gllacy@2x.jpg" alt="Превью сайта мороженного" width="358"
+              height="578" />
           </picture>
         </div>
         <div class="catalog-item__hover-menu">
@@ -173,10 +167,9 @@
             <span>Repository</span>
           </a>
         </div>
-      </li>
+      </li> -->
       <!-- седона -->
-      <li class="catalog-item active" data-filter="html-css">
-        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+      <!-- <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__img">
           <picture>
             <source type="image/webp" srcset="img/img-sedona.webp">
@@ -197,14 +190,13 @@
             <span>Repository</span>
           </a>
         </div>
-      </li>
+      </li> -->
       <!-- карточки с фильтром -->
-      <li class="catalog-item active" data-filter="html-css">
-        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+      <!-- <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__img">
           <picture>
             <source type="image/webp" srcset="img/img-city.webp 1x, img/img-city@2x.webp 2x">
-            <img src="img/img-city.jpg" srcset="img/img-city@2x.jpg 2x" alt="Превью сайт повышения квалификации"
+            <img src="img/img-city.jpg" srcset="img/img-city@2x.jpg 2x" alt="Превью пример стилизации элементов форм"
               width="358" height="578" />
           </picture>
         </div>
@@ -222,10 +214,9 @@
             <span>Repository</span>
           </a>
         </div>
-      </li>
+      </li> -->
       <!-- расчет среднего Vue.js -->
       <!-- <li class="catalog-item active" data-filter="vue-js">
-        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
         <div class="catalog-item__img">
           <picture>
             <source type="image/webp" srcset="img/arkomVue.webp">
@@ -251,8 +242,7 @@
     </ul>
     <ul class="catalog-list catalog-list--js">
       <!-- kekstgramm -->
-      <li class="catalog-item" data-filter="javascript">
-        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+      <!-- <li class="catalog-item" data-filter="javascript">
         <div class="catalog-item__img">
           <picture>
             <source type="image/webp" srcset="">
@@ -267,13 +257,6 @@
           <p class="catalog-item__desc">Учебная работа с онлайн-курса по JavaScript</p>
           <a href="https://askomarov.github.io/kekstagramByHTMLAcademy/" target="_blank"
             class="catalog-item__btn main-btn">заценить</a>
-          <!-- <a class="catalog-item__site-link" href="https://askomarov.github.io/kekstagramByHTMLAcademy/"
-                target="_blank">
-                <svg width="30" height="30">
-                  <use xlink:href="#icon-external-link"></use>
-                </svg>
-                <span>Ссылка на страницу</span>
-              </a> -->
           <a class="catalog-item__repo-link" href="https://github.com/askomarov/kekstagramByHTMLAcademy"
             target="_blank">
             <svg width="30" height="30">
@@ -282,10 +265,9 @@
             <span>Repository</span>
           </a>
         </div>
-      </li>
+      </li> -->
       <!-- keksobooking -->
-      <li class="catalog-item" data-filter="javascript">
-        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+      <!-- <li class="catalog-item" data-filter="javascript">
         <div class="catalog-item__img">
           <picture>
             <source type="image/webp" srcset="">
@@ -308,7 +290,32 @@
             <span>Repository</span>
           </a>
         </div>
-      </li>
+      </li> -->
     </ul>
   </div>
 </section>
+
+<template id="catalog-item">
+  <li class="catalog-item active" data-filter="html-css">
+    <div class="catalog-item__img">
+      <picture>
+        <source type="image/webp" srcset="">
+        <img src="img/img-city.jpg" srcset="" alt="описание картинки" width="358" height="578" />
+      </picture>
+    </div>
+    <div class="catalog-item__hover-menu">
+      <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__title-link">
+        <h2 class="catalog-item__title">Filter</h2>
+      </a>
+      <p class="catalog-item__desc">Пример списка товаров с кастомными элементами формы</p>
+      <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__btn main-btn">view
+        project</a>
+      <a class="catalog-item__repo-link" href="https://github.com/askomarov/filter" target="_blank">
+        <svg width="30" height="30">
+          <use xlink:href="#icon-reposit"></use>
+        </svg>
+        <span>Repository</span>
+      </a>
+    </div>
+  </li>
+</template>
