--- a/source/html/skills.html
+++ b/source/html/skills.html
@@ -1,6 +1,4 @@
-<section class="skills">
-  <a id="skills"></a>
-
+<section id="skills" class="skills">
 
   <div class="skills__container container">
     <!-- <h2 class="skills__title main-title">I can work with</h2> -->
