--- a/source/index.html
+++ b/source/index.html
@@ -11,12 +11,10 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
-<body class="page no-js">
-  <a name="link-on-top"></a>
+<body id="link-on-top" class="page no-js">
   @@include('html/svg-sprite.html')
 
   @@include('html/header.html')
-
 
   <main class="main">
     @@include('html/promo.html')
