каталог будет не пустым и при выключенном JS

--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -47,7 +47,7 @@
     </div>
     <ul class="catalog-list catalog-list--html">
       <!-- погнали -->
-      <!-- <li class="catalog-item active" data-filter="html-css">
+      <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__img catalog-item__img--pognali">
           <picture>
             <source type="image/webp" srcset="img/img-pognali@1xdesktop.webp">
@@ -71,9 +71,9 @@
             <span>Repository</span>
           </a>
         </div>
-      </li> -->
+      </li>
       <!-- way -->
-      <!-- <li class="catalog-item active" data-filter="html-css">
+      <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__img">
           <picture>
             <img src="img/komarov-way-2.jpg" alt="Превью сайт о путешествиях" width="358" height="578" />
@@ -94,7 +94,7 @@
             <span>Repository</span>
           </a>
         </div>
-      </li> -->
+      </li>
       <!-- mishka -->
       <!-- <li class="catalog-item active" data-filter="html-css">
         <div class="catalog-item__img">
@@ -242,7 +242,7 @@
     </ul>
     <ul class="catalog-list catalog-list--js">
       <!-- kekstgramm -->
-      <!-- <li class="catalog-item" data-filter="javascript">
+      <li class="catalog-item active" data-filter="javascript">
         <div class="catalog-item__img">
           <picture>
             <source type="image/webp" srcset="">
@@ -265,9 +265,9 @@
             <span>Repository</span>
           </a>
         </div>
-      </li> -->
+      </li>
       <!-- keksobooking -->
-      <!-- <li class="catalog-item" data-filter="javascript">
+      <li class="catalog-item active" data-filter="javascript">
         <div class="catalog-item__img">
           <picture>
             <source type="image/webp" srcset="">
@@ -290,7 +290,7 @@
             <span>Repository</span>
           </a>
         </div>
-      </li> -->
+      </li>
     </ul>
   </div>
 </section>
