head в отдельный html файл, правки в карточках каталога

--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -161,16 +161,15 @@
     </div>
     <div class="catalog-item__hover-menu">
       <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__title-link">
-        <h2 class="catalog-item__title">Filter</h2>
+        <h2 class="catalog-item__title">Заголовок</h2>
       </a>
-      <p class="catalog-item__desc">Пример списка товаров с кастомными элементами формы</p>
-      <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__btn main-btn">view
-        project</a>
+      <p class="catalog-item__desc">Описание проекта</p>
+      <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__btn main-btn">смотреть сайт</a>
       <a class="catalog-item__repo-link" href="https://github.com/askomarov/filter" target="_blank">
         <svg width="30" height="30">
           <use xlink:href="#icon-reposit"></use>
         </svg>
-        <span>Repository</span>
+        <span>Репозиторий</span>
       </a>
     </div>
   </li>
