--- a/source/index.html
+++ b/source/index.html
@@ -12,9 +12,11 @@
   @@include('html/header.html')
 
   <main class="main">
+    @@include('html/hello.html')
     @@include('html/promo.html')
 
     @@include('html/github.html')
+    @@include('html/lucky.html')
     @@include('html/skills.html')
 
     @@include('html/catalog.html')
