--- a/source/html/header.html
+++ b/source/html/header.html
@@ -1,4 +1,9 @@
 <header class="header">
+  <button type="button" class="hello-btn" aria-label="open hello">
+    <svg width="64" height="64">
+      <use xlink:href="#icon-sunflower"></use>
+    </svg>
+  </button>
   <div class="header__body container">
 
     <a class="header__logo">
