--- a/source/html/promo.html
+++ b/source/html/promo.html
@@ -1,6 +1,13 @@
 <section class="promo">
+  <h1 class="visually-hidden">Здраствуйте! Перед Вами сайт-портфолио Фронтенд разработчика / HTML версталищика -
+    Комарова Артема.</h1>
   <div class="promo__container container">
-    <!-- <div class="promo__img-wrap"> -->
+
+    <div class="promo__promo-text promo-text">
+      <p class="promo-text__job">Frontend-developer</p>
+      <h2 class="promo-text__title">Hello, i'm Artem</h2>
+      <p class="promo-text__decs">I can help you with your HTML CSS JS</p>
+    </div>
 
     <div class="promo__rotate-wrap">
       <input class="visually-hidden" id="profile" name="profile" type="checkbox">
@@ -33,15 +40,14 @@
 
     </div>
 
-
-    <!-- </div> -->
-
-    <h1 class="promo__title">
-      Artem Komarov
-    </h1>
-    <p class="promo__text">
-      J. Frontend-developer
-    </p>
+    <!-- <div>
+      <h2 class="promo__title">
+        Artem Komarov
+      </h2>
+      <p class="promo__text">
+        J. Frontend-developer
+      </p>
+    </div> -->
 
   </div>
 
