обновленные пункты в хедере, логотип

--- a/source/html/header.html
+++ b/source/html/header.html
@@ -19,20 +19,20 @@
 
       <ul class="header-menu__site-list site-list">
         <li class="site-list__item">
-          <a href="#skills" class="site-list__link">Навыки</a>
+          <a href="#skills" class="site-list__link">
+            <span class="site-list__link-text site-list__link-text--skills">навыки</span>
+          </a>
         </li>
         <li class="site-list__item">
-          <a href="#catalog" class="site-list__link">Каталог</a>
+          <a href="#catalog" class="site-list__link">
+            <span class="site-list__link-text site-list__link-text--catalog">каталог</span>
+          </a>
         </li>
-        <li class="site-list__item">
-          <a class="site-list__link">Пункт 3</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link">Пункт 4</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link">Пункт 5</a>
-        </li>
+        <!-- <li class="site-list__item">
+          <a class="site-list__link">
+            <span class="site-list__link-text">Пункт 3</span>
+          </a>
+        </li> -->
       </ul>
     </nav>
     <ul class="header-menu__actions header-actions">
