--- a/source/index.html
+++ b/source/index.html
@@ -11,6 +11,7 @@
 
   @@include('html/header.html')
 
+  <!-- @@include('html/.html') -->
   <main class="main">
     @@include('html/hello.html')
     @@include('html/promo.html')
