--- a/source/html/footer.html
+++ b/source/html/footer.html
@@ -4,7 +4,7 @@
     <div class="footer__contacts contacts">
       <div class="contacts__wrap">
 
-        <div class="contacts__list">
+        <div class="contacts__list contacts__list-footer magick magick--show">
           <a href="https://github.com/askomarov" class="contacts__link" aria-label="github">
             <svg width="40" height="40">
               <use xlink:href="#github-logo"></use>
