--- a/source/html/header.html
+++ b/source/html/header.html
@@ -20,12 +20,12 @@
       <ul class="header-menu__site-list site-list">
         <li class="site-list__item">
           <a href="#skills" class="site-list__link">
-            <span class="site-list__link-text site-list__link-text--skills">навыки</span>
+            <span class="site-list__link-text site-list__link-text--skills">skills</span>
           </a>
         </li>
         <li class="site-list__item">
           <a href="#catalog" class="site-list__link">
-            <span class="site-list__link-text site-list__link-text--catalog">каталог</span>
+            <span class="site-list__link-text site-list__link-text--catalog">catalog</span>
           </a>
         </li>
         <!-- <li class="site-list__item">
