--- a/source/html/promo.html
+++ b/source/html/promo.html
@@ -6,7 +6,10 @@
     <div class="promo__promo-text promo-text">
       <p class="promo-text__job">Frontend-developer</p>
       <h2 class="promo-text__title">Hello, i'm Artem</h2>
-      <p class="promo-text__decs">I can help you with your HTML CSS JS</p>
+      <p class="promo-text__decs">I can help you with your
+      <span id="typed-promo-text" class="promo-text__decs-typing-text"></span>
+        <!-- HTML CSS JS -->
+      </p>
     </div>
 
     <div class="promo__rotate-wrap">
