--- a/source/html/skills.html
+++ b/source/html/skills.html
@@ -12,7 +12,7 @@
         <li>High Quality</li>
       </ul>
     </div>
-    <ul class="skills__list">
+    <ul class="skills__list magick">
       <li class="skills__item">
         <span>
           html
