--- a/source/index.html
+++ b/source/index.html
@@ -26,6 +26,7 @@
   </main>
 
   @@include('html/footer.html')
+  <script src="js/vendors/typed.min.js"></script>
   <script src="js/main.bundle.js"></script>
 </body>
 
