уменьшил размер некоторых изображений

--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -1,4 +1,4 @@
-<section id="catalog" class="catalog">
+<section id="catalog" class="catalog" data-scroll="data-scroll">
   <div class="catalog__container container">
 
     <div class="catalog__filter catalog-filter">
