--- a/source/html/skills.html
+++ b/source/html/skills.html
@@ -1,4 +1,4 @@
-<section id="skills" class="skills">
+<section id="skills" data-scroll="data-scroll" class="skills">
 
   <div class="skills__container container">
     <!-- <h2 class="skills__title main-title">I can work with</h2> -->
