add smooth scrool on ios

--- a/source/html/header.html
+++ b/source/html/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="link-on-top" >
   <button type="button" class="hello-btn" aria-label="open hello">
     <svg width="64" height="64">
       <use xlink:href="#icon-sunflower"></use>
