--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
 "description": "Artem Komarov portfolio site"
 })
 
-<body id="link-on-top" class="page no-js">
+<body class="page no-js">
   @@include('html/svg-sprite.html')
 
   @@include('html/header.html')
