change ru lang text. scroll to top - fix on iOs

--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -161,15 +161,15 @@
     </div>
     <div class="catalog-item__hover-menu">
       <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__title-link">
-        <h2 class="catalog-item__title">Заголовок</h2>
+        <h2 class="catalog-item__title">Project title</h2>
       </a>
-      <p class="catalog-item__desc">Описание проекта</p>
-      <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__btn main-btn">смотреть сайт</a>
+      <p class="catalog-item__desc">Project description</p>
+      <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__btn main-btn">view the work</a>
       <a class="catalog-item__repo-link" href="https://github.com/askomarov/filter" target="_blank">
         <svg width="30" height="30">
           <use xlink:href="#icon-reposit"></use>
         </svg>
-        <span>Репозиторий</span>
+        <span>github/repo</span>
       </a>
     </div>
   </li>
