--- a/source/html/footer.html
+++ b/source/html/footer.html
@@ -15,7 +15,7 @@
             <svg width="40" height="40">
               <use xlink:href="#icon-telegram"></use>
             </svg>
-            <span>Telegram</spam>
+            <span>Telegram</span>
           </a>
         </div>
 
@@ -23,5 +23,6 @@
     </div>
 
   </div>
-  <include src="source/html/waves.html"></include>
+  @@include('waves.html")
+  <!-- <include src="source/html/waves.html"></include> -->
 </footer>
