--- a/source/html/head.html
+++ b/source/html/head.html
@@ -4,6 +4,6 @@
   <!-- @@include('yandex-metrika.html') -->
   <title>Askomarov - Potfolio site</title>
   <meta name="description" content="@@description">
-  <link rel="shortcut icon" href="img/icons/icon-art.png" type="image">
+  <link rel="shortcut icon" href="img/icons/icon-art.png">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
