--- a/source/html/promo.html
+++ b/source/html/promo.html
@@ -32,7 +32,7 @@
               <svg width="40" height="40">
                 <use xlink:href="#icon-telegram"></use>
               </svg>
-              <span>Telegram</spam>
+              <span>Telegram</span>
             </a>
           </div>
         </div>
