--- a/source/html/skills.html
+++ b/source/html/skills.html
@@ -17,15 +17,15 @@
         <span>
           html
         </span>
-        <svg>
-          <use xlink:href="#html"></use>
+        <svg width="45" height="45">
+          <use href="#html"></use>
         </svg>
       </li>
       <li class="skills__item">
         <span>
           css
         </span>
-        <svg>
+        <svg width="45" height="45">
           <use xlink:href="#css"></use>
         </svg>
       </li>
@@ -33,7 +33,7 @@
         <span>
           scss
         </span>
-        <svg>
+        <svg width="45" height="45">
           <use xlink:href="#scss"></use>
         </svg>
       </li>
@@ -41,7 +41,7 @@
         <span>
           js
         </span>
-        <svg>
+        <svg width="45" height="45">
           <use xlink:href="#logos_javascript"></use>
         </svg>
       </li>
@@ -49,7 +49,7 @@
         <span>
           gulp
         </span>
-        <svg>
+        <svg width="45" height="45">
           <use xlink:href="#logos_gulp"></use>
         </svg>
       </li>
@@ -58,7 +58,7 @@
         <span>
           jquery
         </span>
-        <svg>
+        <svg width="45" height="45">
           <use xlink:href="#logos_jquery"></use>
         </svg>
       </li>
@@ -66,7 +66,7 @@
         <span>
           figma
         </span>
-        <svg>
+        <svg width="45" height="45">
           <use xlink:href="#logos_figma"></use>
         </svg>
       </li>
@@ -74,7 +74,7 @@
         <span>
           github
         </span>
-        <svg>
+        <svg width="45" height="45">
           <use xlink:href="#github-logo"></use>
         </svg>
       </li>
@@ -82,7 +82,7 @@
         <span>
           npm
         </span>
-        <svg>
+        <svg width="45" height="45">
           <use xlink:href="#icon-npm"></use>
         </svg>
       </li>
