--- a/source/index.html
+++ b/source/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<include src="source/html/head.html">{
-  "title": "Askomarov - MyPotfolio",
-  "description": "Artem Komarov portfolio site"
-  }</include>
+@@include('html/head.html", {
+"title": "Askomarov - MyPotfolio",
+"description": "Artem Komarov portfolio site"
+})
 
 <body class="page no-js">
-  <include src="source/html/svg-sprite.html"></include>
+  <div class="visually-hidden">
+    @@include('html/svg-sprite.html')
+  </div>
 
-  <include src="source/html/header.html"></include>
-
+  @@include('html/header.html")
   <main class="main">
-    <include src="source/html/hello.html"></include>
-    <include src="source/html/promo.html"></include>
-    <include src="source/html/github.html"></include>
-    <include src="source/html/skills.html"></include>
-    <include src="source/html/catalog.html"></include>
-
+    @@include('html/hello.html")
+    @@include('html/promo.html")
+    @@include('html/github.html")
+    @@include('html/skills.html")
+    @@include('html/catalog.html")
     <a href="#link-on-top" class="link-on-top">
       <span class="link-to-top__ball"></span>
     </a>
   </main>
-
-  <include src="source/html/footer.html"></include>
+  @@include('html/footer.html")
 
   <script src="js/vendors/typed.min.js"></script>
   <script src="js/main.min.js"></script>
